enabled ssl mail options

--- a/installer/preconf/dovecot2/dovecot.conf
+++ b/installer/preconf/dovecot2/dovecot.conf
@@ -3,10 +3,9 @@
 ##
 listen = *
 disable_plaintext_auth = no
-ssl = no
 log_timestamp = %Y-%m-%d %H:%M:%S 
 #log_timestamp was present only in Ubuntu file
-protocols = imap pop3 lmtp sieve
+protocols = imap pop3 imaps pop3s lmtp sieve
 auth_mechanisms = plain login
 passdb {
   driver = sql
@@ -28,10 +27,18 @@ service imap-login {
   inet_listener imap {
     port = 143
   }
+  inet_listener imaps {
+    port = 993
+    ssl = yes
+  }
 }
 service pop3-login {
   inet_listener pop3 {
     port = 110
+  }
+  inet_listener pop3s {
+    port = 995
+    ssl = yes
   }
 }
 service lmtp {
@@ -121,6 +128,11 @@ plugin {
   #sieve_max_actions = 32
   #sieve_max_redirects = 4
 }
+
+ssl = yes
+ssl_key = /etc/pki/tls/private/localhost.key
+ssl_cert = /etc/pki/tls/certs/localhost.crt
+ssl_verify_client_cert = no
 
 log_path = /var/log/dovecot.log
 info_log_path = /var/log/dovecot-info.log
